# voice-typing

./: .gitignore  AGENTS.md  PRD.md  README.md  config.toml  hypr-binds.conf  install.sh  pyproject.toml
plan/001_be48c74bc590/: prd_index.txt  prd_snapshot.md  tasks.json
plan/001_be48c74bc590/P1M1T1S1/: PRP.md
plan/001_be48c74bc590/P1M1T1S2/: PRP.md  issue_feedback.md
plan/001_be48c74bc590/P1M1T2S1/: PRP.md
plan/001_be48c74bc590/P1M1T2S2/: PRP.md
plan/001_be48c74bc590/P1M1T3S1/: PRP.md  prefetch_results.md
plan/001_be48c74bc590/P1M2T1S1/: PRP.md
plan/001_be48c74bc590/P1M2T1S2/: PRP.md
plan/001_be48c74bc590/P1M2T2S1/: PRP.md
plan/001_be48c74bc590/P1M3T1S1/: PRP.md
plan/002_61d807f18dbe/: delta_prd.md  prd_index.txt  tasks.json
plan/003_27d1f88f5a9f/: delta_prd.md  prd_index.txt  prd_snapshot.md  tasks.json
plan/004_607e9cca32b7/: delta_prd.md  prd_index.txt  tasks.json
plan/005_723f4c529eea/: delta_prd.md  prd_index.txt  tasks.json
plan/006_862ee9d6ef41/: delta_prd.md  prd_index.txt  tasks.json
systemd/: voice-typing.service
tests/: ACCEPTANCE.md  e2e_virtual_mic.sh  make_test_audio.sh  test_config.py  test_config_repo_default.py  test_control_socket.py  test_daemon.py  test_feed_audio.py  test_feedback.py  test_idle_and_gpu.sh  test_recorder_host.py  test_status_sh.py  test_systemd_unit.py  test_textproc.py  test_typing_backends.py  test_voicectl.py
voice_typing/: __init__.py  config.py  ctl.py  cuda_check.py  daemon.py  feedback.py  launch_daemon.sh  prefetch.py  recorder_host.py  status.sh  textproc.py  typing_backends.py
(+322 files in other folders)
